--- a/apps/templates/home/login.html
+++ b/apps/templates/home/login.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Login {% endblock %}
+{% block title %} 登录 {% endblock %}
 
 {% block content %}   
 
@@ -17,9 +17,9 @@
                     <div class="mb-4">
                         <i class="feather icon-unlock auth-icon"></i>
                     </div>
-                    <h3 class="mb-4">Login</h3>
+                    <h3 class="mb-4">X</h3>
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="email" class="form-control" placeholder="username">
                     </div>
                     <div class="input-group mb-4">
                         <input type="password" class="form-control" placeholder="password">
@@ -27,12 +27,10 @@
                     <div class="form-group text-left">
                         <div class="checkbox checkbox-fill d-inline">
                             <input type="checkbox" name="checkbox-fill-1" id="checkbox-fill-a1" checked="">
-                            <label for="checkbox-fill-a1" class="cr"> Save Details</label>
+                            <label for="checkbox-fill-a1" class="cr"> 保持登录</label>
                         </div>
                     </div>
-                    <button class="btn btn-primary shadow-2 mb-4">Login</button>
-                    <p class="mb-2 text-muted">Forgot password? <a href="/auth-reset-password.html">Reset</a></p>
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="/register.html">Sign UP</a></p>
+                    <button class="btn btn-primary shadow-2 mb-4">登录</button>
                 </div>
             </div>
         </div>
