--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -16,14 +16,6 @@
         <ul class="navbar-nav mr-auto">
             <li><a href="javascript:" class="full-screen" onclick="javascript:toggleFullScreen()"><i
                     class="feather icon-maximize"></i></a></li>
-            <li class="nav-item dropdown">
-                <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown">Dropdown</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="javascript:">Action</a></li>
-                    <li><a class="dropdown-item" href="javascript:">Another action</a></li>
-                    <li><a class="dropdown-item" href="javascript:">Something else here</a></li>
-                </ul>
-            </li>
             <li class="nav-item">
                 <div class="main-search">
                     <div class="input-group">
@@ -46,65 +38,6 @@
                 </label>
             </li>
             <li>
-                <div class="dropdown">
-                    <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown"><i
-                            class="icon feather icon-bell"></i></a>
-                    <div class="dropdown-menu dropdown-menu-right notification">
-                        <div class="noti-head">
-                            <h6 class="d-inline-block m-b-0">Notifications</h6>
-                            <div class="float-right">
-                                <a href="javascript:" class="m-r-10">mark as read</a>
-                                <a href="javascript:">clear all</a>
-                            </div>
-                        </div>
-                        <ul class="noti-body">
-                            <li class="n-title">
-                                <p class="m-b-0">NEW</p>
-                            </li>
-                            <li class="notification">
-                                <div class="media">
-                                    <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-1.jpg"
-                                         alt="Generic placeholder image">
-                                    <div class="media-body">
-                                        <p><strong>John Doe</strong><span class="n-time text-muted"><i
-                                                class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                                        <p>New ticket Added</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="n-title">
-                                <p class="m-b-0">EARLIER</p>
-                            </li>
-                            <li class="notification">
-                                <div class="media">
-                                    <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-2.jpg"
-                                         alt="Generic placeholder image">
-                                    <div class="media-body">
-                                        <p><strong>Joseph William</strong><span class="n-time text-muted"><i
-                                                class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                                        <p>Prchace New Theme and make payment</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="notification">
-                                <div class="media">
-                                    <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-3.jpg"
-                                         alt="Generic placeholder image">
-                                    <div class="media-body">
-                                        <p><strong>Sara Soudein</strong><span class="n-time text-muted"><i
-                                                class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                                        <p>currently login</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                        <div class="noti-footer">
-                            <a href="javascript:">show all</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
                 <div class="dropdown drp-user">
                     <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="icon feather icon-settings"></i>
@@ -115,13 +48,11 @@
                             <span>
                                 {{ current_user.username }}    
                             </span>
-                            <a href="/auth-signin.html" class="dud-logout" title="Logout">
+                            <a href="/#" class="dud-logout" title="Logout">
                                 <i class="feather icon-log-out"></i>
                             </a>
                         </div>
                         <ul class="pro-body">
-                            <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-user"></i>
-                                Profile</a></li>
                             <li><a href="{{ url_for('authentication_blueprint.logout') }}" class="dropdown-item">
                                 <i class="feather icon-lock"></i> Logout</a>
                             </li>
